@@ -1,6 +1,7 @@
 LIST OF CHANGES
 ---------------
 
+ - seqchksum_comparator to cope with higher plexing (with a chdir)
  - force HiSeq rapid run V2 flowcells (BCXX suffix) to use P4
 
 release 48.3
